# aws-build

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
aws-build/: Cargo.toml  README.md
aws-build-lib/: Cargo.toml
aws-build-lib/src/: lib.rs
aws-build-lib/src/container/: Dockerfile  build.sh
aws-build-lib/tests/: integration.rs
aws-build/src/: main.rs
src/: command.rs  docker.rs  git.rs  lib.rs  main.rs
src/container/: Dockerfile  build.sh
xtask/: Cargo.toml
xtask/src/: main.rs
