[package]
name = "lambda-build"
version = "0.9.1-alpha.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/lambda-build"
license = "Apache-2.0"
description = "Build Rust crates for deployment to AWS Lambda"
readme = "README.md"
keywords = ["aws", "lambda", "docker", "container", "build"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
fehler = "1.0"
users = "0.10"
