[package]
name = "aws-build"
version = "0.9.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/aws-build"
license = "Apache-2.0"
description = "Build Rust crates for deployment to AWS EC2 or AWS Lambda"
readme = "README.md"
keywords = ["aws", "lambda", "docker", "container", "build", "ec2"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
cargo_metadata = "0.11"
chrono = "0.4"
docker-command = "0.6"
fehler = "1.0"
log = { version = "0.4", features = ["std"] }
sha2 = "0.9"
tempfile = "3.1"
zip = "0.5"
