[package]
name = "aws-build-lib"
version = "0.9.3"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

description = "Build Rust crates for deployment to AWS EC2 or AWS Lambda"
keywords = ["aws", "lambda", "docker", "build", "ec2"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nicholasbishop/aws-build"

[dependencies]
anyhow = { version = "1.0", default-features = false }
cargo_metadata = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
docker-command = { version = "0.7", default-features = false }
fehler = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false, features = ["std"] }
sha2 = { version = "0.9", default-features = false }
tempfile = { version = "3.1", default-features = false }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
