[package]
name = "aws-build-lib"
version = "0.9.3"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"

description = "Build Rust crates for deployment to AWS EC2 or AWS Lambda"
keywords = ["aws", "lambda", "docker", "build", "ec2"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nicholasbishop/aws-build"

[dependencies]
anyhow = { version = "1.0.45", default-features = false }
cargo_metadata = { version = "0.14.1", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
docker-command = { version = "1.0.1", default-features = false, features = ["logging"] }
fehler = { version = "1.0.0", default-features = false }
log = { version = "0.4.14", default-features = false, features = ["std"] }
sha2 = { version = "0.9.8", default-features = false }
tempfile = { version = "3.2.0", default-features = false }
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
