[package]
name = "aws-build"
version = "0.9.3"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

description = "Build Rust crates for deployment to AWS EC2 or AWS Lambda"
keywords = ["aws", "lambda", "docker", "build", "ec2"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nicholasbishop/aws-build"

[dependencies]
aws-build-lib = { version = "0.9.3-alpha.0", path = "../aws-build-lib" }

anyhow = "1.0"
argh = "0.1"
fehler = "1.0"
log = "0.4"
