[package]
name = "aws-build"
version = "0.9.3"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"

description = "Build Rust crates for deployment to AWS EC2 or AWS Lambda"
keywords = ["aws", "lambda", "docker", "build", "ec2"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nicholasbishop/aws-build"

[dependencies]
aws-build-lib = { path = "../aws-build-lib" }

anyhow = { version = "1.0.46", default-features = false, features = ["std"] }
argh = { version = "0.1.6", default-features = false }
fehler = { version = "1.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
