[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.45", default-features = false, features = ["std"] }
argh = { version = "0.1.6", default-features = false }
command-run = { version = "1.1.1", default-features = false }
fehler = { version = "1.0.0", default-features = false }
fs-err = { version = "2.6.0", default-features = false }
rayon = { version = "1.5.1", default-features = false } 

[package.metadata.release]
release = false
